Fix: #3289, fix: #3246 - Redesign the expand/collapse note structure to ensure we have an anchor for the shared note

--- a/resources/css/clouds.css
+++ b/resources/css/clouds.css
@@ -793,10 +793,6 @@ a:hover .name1, a:hover .name2 {
     padding: 1px;
 }
 
-.source_citations {
-    display: none;
-}
-
 .selected-option {
     background-color: #cef;
 }
