--- a/resources/css/fab.css
+++ b/resources/css/fab.css
@@ -529,10 +529,6 @@ a:hover, a:hover .name1, a:hover .name2 {
     padding: 1px;
 }
 
-.source_citations {
-    display: none;
-}
-
 .selected-option {
     background-color: #d6e0ea;
 }
